styles/doodlejump.css
p, span {
  font-family: "DoodleJumpBold_v2";
}

body {
  margin: 0;
  display: flex; /* Enable flexbox layout */
  justify-content: center; /* Horizontally center items */
  align-items: center; /* Vertically center items */
  height: 100vh; /* Full viewport height */
}

#content {
  position: relative;
  max-width: 775px;
}

#top-bar {
  position: absolute;
  width: 100%;
  height: 55px;
  background-color: #c7e0f7b0;
}

#top-bar-content {
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

#score {
  margin-left: 10px;
  font-size: 30px;
  font-weight: bold;
  user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
}

#board {
  background-image: url("/assets/doodlejumpbg.png");
}

